Fixed comfig stuff, still need to test

--- a/src/server/server_config.json
+++ b/src/server/server_config.json
@@ -1,3 +1,4 @@
 {
-  "ServerConfig": {"templates_path": "../web/html_templates"}
+  "html_templates": "../web/html_templates/",
+  "port" : "8080"
 }
