Did a lot of work, forgot i was using Git. Currently have it serving CSS fine

--- a/src/server/server_config.json
+++ b/src/server/server_config.json
@@ -1,4 +1,7 @@
 {
-  "html_templates": "../web/html_templates/",
+  "html_templates": "../web/html_templates/*.html",
+  "css_loc": "../web/css/*.css",
+  "javascript_loc": "../web/js",
+  "static_html": "../html_static",
   "port" : "8080"
 }
